- make requirement and program node font size larger - making height of the div larger fixed the cursor misalignment issue - add animation

--- a/src/styles.css
+++ b/src/styles.css
@@ -381,5 +381,5 @@ ul > li {
 
 #cy {
     width: 100%;
-    height: 50vh;
+    height: 70vh;
 }
